# concord-bft

./: README.md
bftengine/tests/simpleKVBCTests/: simpleKVBCTests.cpp  simpleKVBCTests.h
bftengine/tests/simpleKVBCTests/TesterClient/: CMakeLists.txt  main.cpp
bftengine/tests/simpleKVBCTests/TesterReplica/: main.cpp
bftengine/tests/simpleKVBCTests/scripts/: basicTestA1.sh  start_client.sh  start_replica.sh
